Add full solution to q6p1